@@ -14,6 +14,7 @@ debian-installer (20040806) UNRELEASED; urgency=medium
     - Add preseed udebs to initrds and document preseeding in manual.
       Closes: #265988
     - Bump genext2fs build dep to avoid building images with broken versions.
+    - Remove the ugly and no longer needed genext2fs size hack.
   * dann frazier
     - Add ia64 elilo .msg files from Jim Lieb
     - Add ia64 2.6 image build goo, contributed by Jim Lieb
